--- a/Web.Statu/Views/Kindex/Porovnat.cshtml
+++ b/Web.Statu/Views/Kindex/Porovnat.cshtml
@@ -76,7 +76,7 @@
     <div class="col-sm-12">
         <h3 class="">
             Porovnání pro další roky:
-            @foreach (int year in Consts.CalculationYears)
+            @foreach (int year in Consts.AvailableCalculationYears)
             {
                 if (year != selectedYear)
                 {
