--- a/Web.Statu/Views/Subjekt/Index.cshtml
+++ b/Web.Statu/Views/Subjekt/Index.cshtml
@@ -70,7 +70,7 @@
 
     @* ----- Rizika ----- *@
     @{ 
-        int rok = HlidacStatu.Lib.Analysis.KorupcniRiziko.Consts.CalculationYears.Max();
+        int rok = HlidacStatu.Lib.Analysis.KorupcniRiziko.Consts.AvailableCalculationYears.Max();
     }
     <div>
         <h4>
