--- a/Web.Statu/Views/Subjekt/Rizika.cshtml
+++ b/Web.Statu/Views/Subjekt/Rizika.cshtml
@@ -11,7 +11,7 @@
 @{
     Layout = null;
 
-    var roky = HlidacStatu.Lib.Analysis.KorupcniRiziko.Consts.CalculationYears;
+    var roky = HlidacStatu.Lib.Analysis.KorupcniRiziko.Consts.AvailableCalculationYears;
 
 }
 
