--- a/Web.Statu/Views/Kindex/Zebricek_child.cshtml
+++ b/Web.Statu/Views/Kindex/Zebricek_child.cshtml
@@ -68,7 +68,7 @@
     <div class="col-sm-12">
         <h3 class="">
             Žebříček pro další roky:
-            @foreach (int year in Consts.CalculationYears)
+            @foreach (int year in Consts.AvailableCalculationYears)
             {
                 if (year != selectedYear)
                 {
