--- a/Web.Statu/App_Code/WebUtil.cshtml
+++ b/Web.Statu/App_Code/WebUtil.cshtml
@@ -1073,7 +1073,7 @@ Máme pro vás denné sledovat <b>nové {dataTypeName} odpovídající tomuto do
                         <h4 class="modal-title" id="@(idPrefix)fbTitle">
                             @headerText
                         </h4>
-                        @subText
+                        @Html.Raw(subText)
                     </div>
 
                     <!-- Modal Body -->
