--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -582,6 +582,16 @@
         IgnoreSection("onlyembed");
     }
 
+<!-- Global site tag (gtag.js) - Google Ads: 833359036 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-833359036"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-833359036');
+</script>
+
 </body>
 </html>
 
