--- a/Web.Statu/Views/Home/AnalyzaPlatcu.cshtml
+++ b/Web.Statu/Views/Home/AnalyzaPlatcu.cshtml
@@ -165,14 +165,15 @@
 
     </div>
     <div class="col-xs-12 col-sm-6">
-        <h4>Objem smluv pro jednotlivé plátce za poslední 2 celé roky</h4>
+        <h4>Objem smluv pro jednotlivé plátce za poslední 4 roky</h4>
         @UtilChart.RenderReport("Suma ročních kontraktů pro jednotlivé plátce", ReportModel.QueueItem.types.chart,
                 UtilChart.SimpleBarChart(
                     false, false, 300, "chartinfo", "Plátci", "Kč",
-                        new[] {
-                            coreRDS.Filter(new string[] { "Title", "Cena_Y_2019" }, 10,"2019" ),
-                            coreRDS.Filter(new string[] { "Title", "Cena_Y_2018" }, 10,"2018" ),
-                    },
+                        Enumerable.Range(minDateYear, maxDateYear-minDateYear+1)
+                                .Reverse().Take(4)
+                                .Select(year => coreRDS.Filter(new string[] { "Title", $"Cena_Y_{year}" }, 10,$"{year}" ))
+                                .ToArray()
+                    ,
                     tooltipFormatFull: "<center><small>{point.category}</small><br /><b>{point.y:,.0f}</b></center>"
                     ), ""
                 )
