kindex cache fix

--- a/Web.Statu/Views/Kindex/Detail_child.cshtml
+++ b/Web.Statu/Views/Kindex/Detail_child.cshtml
@@ -704,6 +704,7 @@ else
 
 <hr style="margin-top:50px" />
 
+<h3>Informace o K-Indexu</h3>
 <a href="@HlidacStatu.Lib.Analysis.KorupcniRiziko.KIndexData.GetKratkaMetodikaURL()" class="btn btn-default">Stručný popis výpočtu K-Indexu</a>
 <a href="@HlidacStatu.Lib.Analysis.KorupcniRiziko.KIndexData.GetMetodikaURL()" class="btn btn-default">Podrobná metodika K-Indexu</a>
 
